--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
         </div>
 
         <div class="offerCards">
-
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">Slide 1</div>
@@ -109,6 +108,24 @@
               </div>
         </div>
 
+        <div class="offerAll">
+            Show All <br> Offers
+        </div>
+
+    </div>
+
+    <div class="aboutUs">
+        <div class="aboutImage">
+            <img src="aboutUs.png" alt="">
+        </div>
+        <div class="aboutUsText">
+            <div class="aboutUsTitle">
+                About Us
+            </div>
+            <div class="aboutUsCaption">
+                We are a company that connects the world of real <br>estate and finance. We provide a complete service for <br>the sale, purchase or rental of real estate. Our <br> advantage is more than 15 years of experience and soil in <br>attractive locations in Slovakia with branches in <br>Bratislava and Košice.
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
