--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/zub3tbp.css">
     <title>Real Estate Website</title>
 </head>
 <body>
@@ -123,11 +125,51 @@
                 About Us
             </div>
             <div class="aboutUsCaption">
-                We are a company that connects the world of real <br>estate and finance. We provide a complete service for <br>the sale, purchase or rental of real estate. Our <br> advantage is more than 15 years of experience and soil in <br>attractive locations in Slovakia with branches in <br>Bratislava and Košice.
+                We are a company that connects the world of real estate and finance. We provide a complete service for the sale, purchase or rental of real estate. Our advantage is more than 15 years of experience and soil in attractive locations in Slovakia with branches in Bratislava and Košice.
+            </div>
+            <div class="aboutUsCaption">
+                We are a company that connects the world of real estate and finance. We provide a complete service for the sale, purchase or rental of real estate. 
             </div>
         </div>
     </div>
 
+    <div class="Team">
+        <div class="TeamTitle">
+            Our Team
+        </div>
+    </div>
+
+    <div class="references">
+        <div class="referencesTitle">
+            References
+        </div>
+
+        <div class="referencesCaption">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus rutrum donec ultricies cras id ac.
+        </div>
+
+        <div class="referencesCards">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">Slide 1</div>
+                  <div class="swiper-slide">Slide 2</div>
+                  <div class="swiper-slide">Slide 3</div>
+                  <div class="swiper-slide">Slide 4</div>
+                  <div class="swiper-slide">Slide 5</div>
+                  <div class="swiper-slide">Slide 6</div>
+                  <div class="swiper-slide">Slide 7</div>
+                  <div class="swiper-slide">Slide 8</div>
+                  <div class="swiper-slide">Slide 9</div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
     <script>
