Tried Making it responsive

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <div class="aboutUs">
         <div class="aboutImage">
-            <img src="aboutUs.png" alt="">
+            <img height="60%" src="aboutUs.png" alt="">
         </div>
         <div class="aboutUsText">
             <div class="aboutUsTitle">
