add offers Page

--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
                   </div>
                 
             </div>
-            <input type="text" class="search"></input>
-            <div class="searchButton">Search</div>
-        </div>
+            <div class="offersSearch">
+                <input type="text" class="search"></input>
+                <div class="searchButton">Search</div>
+            </div>
 
+        </div>
     </div>
 
     <div class="topOffers">
@@ -89,23 +91,21 @@
 
         </div>
 
-        <div class="offerRule">
-            <hr>
-        </div>
+        <div class="offerRule"> <hr> </div>
 
         <div class="offerCards">
             <div class="hell">
-                <section class="panel a">
+                <section class="panel">
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
                 </section>
-                <section class="panel b">
+                <section class="panel">
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
                 </section>
-                <section class="panel c">
+                <section class="panel">
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
