Added working links, and renamed Login button class

--- a/offers.html
+++ b/offers.html
@@ -21,14 +21,14 @@
 
         <ul class="navbarList">
 
-            <li>Top Offers</li>
+            <li href="offers.html">Top Offers</li>
             <li>Search in Offers</li>
             <li>About Us</li>
             <li>References</li>
 
         </ul>
 
-        <div class="contactUs"> Login </div>
+        <div class="navLogin" href="login.html"> Login </div>
 
     </nav>
 
