--- a/offers.html
+++ b/offers.html
@@ -28,7 +28,7 @@
 
         </ul>
 
-        <div class="navLogin" href="login.html"> Login </div>
+        <div class="navLogin" onclick="window.location='login.html'"> Login </div>
 
     </nav>
 
