Fixed navbar links

--- a/offers.html
+++ b/offers.html
@@ -16,12 +16,12 @@
     <nav>
 
         <div class="navbarLogo">
-            <img class="logo" src="logo.png" alt="">
+            <img class="logo" src="logo.png" alt="" onclick="window.location='index.html'">
         </div>
 
         <ul class="navbarList">
 
-            <li href="offers.html">Top Offers</li>
+            <li onclick="window.location='index.html'">Home</li>
             <li>Search in Offers</li>
             <li>About Us</li>
             <li>References</li>
