--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <nav>
 
         <div class="navbarLogo">
-            <img class="logo" src="logo.png" alt="">
+            <img class="logo" src="logo.png" alt="" onclick="window.location='index.html'">
         </div>
 
         <ul class="navbarList">
 
-            <li href="offers.html">Top Offers</li>
+            <li onclick="window.location='offers.html'">Top Offers</li>
             <li>Search in Offers</li>
             <li>About Us</li>
             <li>References</li>
