Fixed some links again

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <ul class="navbarList">
 
-            <li onclick="window.location='offers.html'">Top Offers</li>
-            <li>Search in Offers</li>
+            <li>Top Offers</li>
+            <li onclick="window.location='offers.html'">Search in Offers</li>
             <li>About Us</li>
             <li>References</li>
 
