--- a/offers.html
+++ b/offers.html
@@ -22,7 +22,7 @@
         <ul class="navbarList">
 
             <li onclick="window.location='index.html'">Home</li>
-            <li>Search in Offers</li>
+            <li>Top Offers</li>
             <li>About Us</li>
             <li>References</li>
 
