Links and scrolling edited

--- a/offers.html
+++ b/offers.html
@@ -22,9 +22,7 @@
         <ul class="navbarList">
 
             <li onclick="window.location='index.html'">Home</li>
-            <li>Top Offers</li>
-            <li>About Us</li>
-            <li>References</li>
+            <li onclick="window.location='index.html#topOffers'">Top Offers</li>
 
         </ul>
 
