--- a/detailOffer.html
+++ b/detailOffer.html
@@ -23,9 +23,8 @@
         <ul class="navbarList">
 
             <li onclick="window.location='index.html'">Home</li>
-            <li>Search in Offers</li>
-            <li>About Us</li>
-            <li>References</li>
+            <li onclick="window.location='index.html#topOffers'">Top Offers</li>
+            <li onclick="window.location='offers.html'">Search in Offers</li>
 
         </ul>
 
