--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/zub3tbp.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <title>Real Estate Website</title>
 </head>
 <body>
@@ -27,10 +27,10 @@
 
         <ul class="navbarList">
 
-            <li>Top Offers</li>
+            <li id="topOffers__link">Top Offers</li>
             <li onclick="window.location='offers.html'">Search in Offers</li>
-            <li>About Us</li>
-            <li>References</li>
+            <li onclick="window.location='#aboutUs'">About Us</li>
+            <li onclick="window.location='#references'">References</li>
 
         </ul>
 
@@ -51,7 +51,7 @@
         </div>
 
         <div class="heroAnimation">
-            <div class="line1">BUY SELL BUY SELL BUY </div>
+            <div class="line1">BUY SELL BUY SELL BUY SELL BUY</div>
             <div class="line2">SELL BUY SELL BUY SELL BUY SELL</div>
             <div class="line3">BUY SELL BUY SELL BUY SELL BUY</div>
         </div>
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <div class="topOffers">
+    <div class="topOffers" id="topOffers">
 
         <div class="offerTitle">
 
@@ -119,7 +119,7 @@
 
     </div>
 
-    <div class="aboutUs">
+    <div class="aboutUs" id="aboutUs">
         <div class="aboutImage">
             <img  data-aos="zoom-in" height="60%" src="aboutUs.png"  alt="">
         </div>
@@ -156,7 +156,7 @@
        
     </div>
 
-    <div  class="references">
+    <div class="references" id="references">
         <div data-aos="fade-up" class="referencesTitle">
             References
         </div>
@@ -235,6 +235,12 @@
           },
         });
     </script>
-
+    <script>
+        $("#topOffers__link").click(function() {
+            $('html, body').animate({
+                scrollTop: $("#topOffers").offset().top
+            }, 2000);
+        });
+    </script>
 </body>
 </html>
