Fixed search bar

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <option value="Option 3">Other</option>
                 </select>
             <div class="offersSearch">
-                <input type="text" class="search-bar" placeholder="Search of location"></input>
+                <input type="text" class="search-bar" placeholder="Search location"></input>
                 <button class="search-btn" onclick="searchProperty()"><i class="search-icon fa-solid fa-magnifying-glass"></i></button>
             </div>
         </div>
