--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <span></span>
             <ul id="menu">
                 <li><a class="navlist" href="#top-offers">Top Offers</a></li>
-                <li><a class="navlist" href="#">About Us</a></li>
-                <li><a class="navlist" href="#">Our Team</a></li>
-                <li><a class="navlist" href="#">References</a></li>
+                <li><a class="navlist" href="#about-us">About Us</a></li>
+                <li><a class="navlist" href="#team">Our Team</a></li>
+                <li><a class="navlist" href="#references">References</a></li>
             </ul>
         </div>
         <div class="navbar-logo">
@@ -97,37 +97,95 @@
         <hr class="offer-hr">
         <button class="offer-btn" onclick="showOffers()">Show All offers</button>
         <div class="offerCards">
-                <section class="card" data-aos="fade-up">
-                    <img class="card-image" src="src/house-listing.png">
-                    <div class="card-name">Large 4-room apartment with a beautiful terrace</div>
-                    <div class="card-place">Barcelona IX.</div>
-                    <div class="card-price">Rs. 1.99 Lakh</div>
-                </section>
-                <section class="card" data-aos="fade-up">
-                    <img class="card-image" src="src/house-listing.png">
-                    <div class="card-name">Large 4-room apartment with a beautiful terrace</div>
-                    <div class="card-place">Barcelona IX.</div>
-                    <div class="card-price">Rs. 1.99 Lakh</div>
-                </section>
-                <section class="card" data-aos="fade-up">
-                    <img class="card-image" src="src/house-listing.png">
-                    <div class="card-name">Large 4-room apartment with a beautiful terrace</div>
-                    <div class="card-place">Barcelona IX.</div>
-                    <div class="card-price">Rs. 1.99 Lakh</div>
-                </section>
-                <section class="card" data-aos="fade-up">
-                    <img class="card-image" src="src/house-listing.png">
-                    <div class="card-name">Large 4-room apartment with a beautiful terrace</div>
-                    <div class="card-place">Barcelona IX.</div>
-                    <div class="card-price">Rs. 1.99 Lakh</div>
-                </section>
+            <section class="card" data-aos="fade-up">
+                <img class="card-image" src="src/house-listing.png">
+                <div class="card-name">Large 4-room apartment with a beautiful terrace</div>
+                <div class="card-place">Barcelona IX.</div>
+                <div class="card-price">Rs. 1.99 Lakh</div>
+            </section>
+            <section class="card" data-aos="fade-up">
+                <img class="card-image" src="src/house-listing.png">
+                <div class="card-name">Large 4-room apartment with a beautiful terrace</div>
+                <div class="card-place">Barcelona IX.</div>
+                <div class="card-price">Rs. 1.99 Lakh</div>
+            </section>
+            <section class="card" data-aos="fade-up">
+                <img class="card-image" src="src/house-listing.png">
+                <div class="card-name">Large 4-room apartment with a beautiful terrace</div>
+                <div class="card-place">Barcelona IX.</div>
+                <div class="card-price">Rs. 1.99 Lakh</div>
+            </section>
+            <section class="card" data-aos="fade-up">
+                <img class="card-image" src="src/house-listing.png">
+                <div class="card-name">Large 4-room apartment with a beautiful terrace</div>
+                <div class="card-place">Barcelona IX.</div>
+                <div class="card-price">Rs. 1.99 Lakh</div>
+            </section>
         </div>
     </div>
 
     <!-- Page 3 -->
-    <div class="page-3">
-
+    <div class="page-3" id="about-us">
+        <h1 class="heading" data-aos="zoom-in">About Us</h1>
+        <p class="caption" data-aos="fade-up">We are a company that connects the world of real estate and finance.
+            We provide a complete service for
+            the sale, purchase or rental of real estate. Our advantage is more than 15 years of experience and soil
+            in attractive locations in Slovakia with branches in Bratislava and Košice.</p>
+        <p class="about-caption" data-aos="fade-up" data-aos-anchor=".about-caption">We are a company that connects the
+            world of real estate and finance. We provide a complete service for
+            the sale, purchase or rental of real estate.</p>
+        <img src="src/aboutUs.png" alt="about-us" class="about-img" data-aos="zoom-in">
     </div>
+
+    <!-- Page 4 -->
+    <div class="page-4" id="team">
+        <h1 class="heading">Our Team</h1>
+        <div class="teamCards">
+            <section class="mem-card" data-aos="flip-left">
+            </section>
+            <section class="mem-card" data-aos="flip-left">
+            </section>
+            <section class="mem-card" data-aos="flip-left">
+            </section>
+        </div>
+    </div>
+
+    <!-- Page 5 -->
+
+    <div class="page-5" id="references">
+        <h1 class="heading">References</h1>
+        <p class="caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus rutrum donec ultricies cras id ac.</p>
+        <div class="RefCards">
+            <section class="ref-card"  data-aos="flip-up">
+                <div class="ref-opinion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in
+                    pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem.
+                    Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies
+                    pretium.</div>
+                <div class="ref-name">Emerson Aminoff</div>
+                <div class="ref-house">3 bedroom apartment in Madrid</div>
+            </section>
+            <section class="ref-card" data-aos="flip-up">
+                <div class="ref-opinion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in
+                    pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem.
+                    Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies
+                    pretium.</div>
+                <div class="ref-name">Emerson Aminoff</div>
+                <div class="ref-house">3 bedroom apartment in Madrid</div>
+            </section>
+            <section class="ref-card" data-aos="flip-up">
+                <div class="ref-opinion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique in
+                    pellentesque ultrices et massa neque, convallis lorem. Erat proin in posuere dui accumsan lorem.
+                    Diam nunc scelerisque mi vestibulum scelerisque mi ac nisi. Dictumst nunc placerat ultricies
+                    pretium.</div>
+                <div class="ref-name">Emerson Aminoff</div>
+                <div class="ref-house">3 bedroom apartment in Madrid</div>
+            </section>
+        </div>
+    </div>
+
+    <!-- Footer -->
+
+    <div class="footer">© 2022 Batman, DC.</div>
 
     <!-- AOS script -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
