--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             We provide a complete service for
             the sale, purchase or rental of real estate. Our advantage is more than 15 years of experience and soil
             in attractive locations in Slovakia with branches in Bratislava and Košice.</p>
-        <p class="about-caption" data-aos="fade-up" data-aos-anchor=".about-caption">We are a company that connects the
+        <p class="caption" data-aos="fade-up" data-aos-anchor=".about-caption">We are a company that connects the
             world of real estate and finance. We provide a complete service for
             the sale, purchase or rental of real estate.</p>
         <img src="src/aboutUs.png" alt="about-us" class="about-img" data-aos="zoom-in">
