Bug fixes and added home link

--- a/login.html
+++ b/login.html
@@ -59,10 +59,9 @@
                 <div class="form__group">
                     <button class="google"><img src="src/google.svg" alt="icon"> Google</button>
                 </div>
+            </form>
+            <p class="home"><a href="index.html" class="form__redirect__link"><i class="fa-solid fa-house"></i> Home</a></p>
         </div>
-
-        </form>
-    </div>
     </div>
 </body>
 
