--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
         }
 
         function Login() {
-            window.location.href = "/login.html";
+            window.location.href = "login.html";
         }
 
         function showOffers() {
-            window.location.href = "/offers.html";
+            window.location.href = "offers.html";
         }
     </script>
 </body>
